# gerenciador-de-leitos

./: .env  Cargo.toml  README.md  configuration.yaml
.github/workflows/: general.yml
configuration/: base.yaml
migrations/: 20210301133224_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: hospitais.rs  leitos.rs  mod.rs  pacientes.rs  serializers.rs
tests/api/: helpers.rs  hospitais.rs  leitos.rs  main.rs  pacientes.rs  ping.rs
