[package]
name = "gerenciador_leitos"
version = "0.1.0"
authors = ["Gabriel Igor <gabriel.igorq@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "gerenciador_leitos"

[dependencies]
actix = "0.11.0-beta.2"
actix-web = "4.0.0-beta.3"
serde = "1.0.124"
serde-aux = "1.0.1"
config = { version = "0.10.1", default-features = false, features = ["yaml"] }
sqlx = { version = "0.5.2", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "migrate", "json", "offline"]  }
async-std = { version = "1.6", features = [ "attributes" ] }
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tracing = "0.1.25"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.1.6"
tracing-log = "0.1.1"
tracing-actix-web = "0.3.0-beta.2"

[dev-dependencies]
lazy_static = "1.4.0"
serde_json = "1"
actix-rt = "2"
tokio = { version = "1", features = ["macros"] }